syntax = "proto3";

package api.article.v1;
option go_package=".;v1";

service Article {
  rpc GetArticle (ArticleRequest) returns (ArticleReply);
}

// The request message containing the user's name.
message ArticleRequest {
  int64 id = 1;
}

// The response message containing the greetings
message ArticleReply {
  int64 id = 1;
  string title = 2;
  string content = 3;
}